# discord_bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bot_cmd.cpp  bot_database.py  bot_help.py  bucket_list  cahplayer.cpp  cahplayer.h  cahplaysession.cpp  cahplaysession.h  carddeck.cpp  carddeck.h  cardstack.cpp  cardstack.h  com_rules.cpp  com_rules.h  commandclient.cpp  commandclient.h  config.txt  config_dummy.txt  connect_four.py  dc_botClient.cpp  dc_botClient.h  discordcommand.cpp  discordcommand.h  event_log.cpp  event_log.h  main.cpp  main.py  mathParser.py  miscCode.cpp  misc_functions.py  myclientclass.cpp  myclientclass.h  party_notifier.py  poll.cpp  poll.h  polling.py  (+1 more)
CAH_decks/standard/: black.txt  info.txt  white.txt
HEADERS/: dc_botClient.h  ev_log.h  poll.h
SOURCES/: dc_botClient.cpp  ev_log.cpp  main.cpp  miscCode.cpp  poll.cpp
